--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -24,3 +24,26 @@
     padding: 24px 0;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .main-header {
+    position: relative;
+
+    &::after{
+      content: "";
+      position: absolute;
+      background-image: linear-gradient(rgba(104, 183, 56, 0.85),
+                                        rgba(104, 183, 56, 0.85)),
+      url(../img/index-background-desktop.png);
+      right: 0;
+      top: 0;
+      height: 694px;
+      width: 720px;
+    }
+  }
+
+  .main-header__wrapper{
+    padding: 53px 0 29px;
+
+  }
+}
