--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -66,3 +66,30 @@
     }
   }
 }
+
+@media (min-width: $desktop-width) {
+  .site-list {
+    color: $white;
+    background-color: transparent;
+  }
+
+  .site-list__link {
+    color: $white;
+  }
+
+  .site-list__item{
+    font-size: 20px;
+    line-height: 30px;
+
+    &--current::after{
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      right: 1px;
+      left: 1px;
+      background-color: $white;
+    }
+  }
+}
