--- a/source/sass/blocks/main/form-contact.scss
+++ b/source/sass/blocks/main/form-contact.scss
@@ -10,7 +10,6 @@
     &::after{
       position: absolute;
       content: "";
-      display: block;
       background-color: $basic-green;
       width: 99px;
       height: 2px;
@@ -63,24 +62,22 @@
   .form-contact__title{
 
       &::before{
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
-      width: 30px;
-      height: 2px;
-      left: -70px;
-      top: 20px;
+        position: absolute;
+        content: "";
+        background-color: $basic-green;
+        width: 30px;
+        height: 2px;
+        left: -70px;
+        top: 20px;
     }
       &::after{
         position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
-      width: 145px;
-      height: 2px;
-      right: -70px;
-      top: 20px;
+        content: "";
+        background-color: $basic-green;
+        width: 145px;
+        height: 2px;
+        right: -70px;
+        top: 20px;
     }
   }
 }
@@ -94,24 +91,22 @@
   .form-contact__title{
 
     &::before{
-    position: absolute;
-    content: "";
-    display: block;
-    background-color: #68b738;
-    width: 70px;
-    height: 2px;
-    left: -110px;
-    top: 20px;
-  }
+      position: absolute;
+      content: "";
+      background-color: $basic-green;
+      width: 70px;
+      height: 2px;
+      left: -110px;
+      top: 20px;
+    }
     &::after{
       position: absolute;
-    content: "";
-    display: block;
-    background-color: #68b738;
-    width: 778px;
-    height: 2px;
-    right: -110px;
-    top: 20px;
+      content: "";
+      background-color: $basic-green;
+      width: 778px;
+      height: 2px;
+      right: -110px;
+      top: 20px;
+    }
   }
-}
 }
