--- a/source/sass/blocks/main/form.scss
+++ b/source/sass/blocks/main/form.scss
@@ -48,6 +48,19 @@
 }
 
 @media (min-width: $desktop-width){
+  .form__title{
+    padding: 39px 0 54px;
+  }
+
+  .form__descripton{
+    padding: 0;
+    width: 370px;
+  }
+
+  .form__program-selection{
+    padding: 66px 0 72px;
+  }
+
   .form__details-wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr;
