--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -82,7 +82,6 @@
     padding: 0;
     font-size: 36px;
     line-height: 36px;
-
   }
 
   .programs__description{
@@ -100,3 +99,45 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .programs{
+    padding-top: 82px;
+  }
+
+  .programs__list{
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
+
+  .programs__item{
+    padding: 41px 51px 59px;
+
+    &--weight-loss{
+      &::before{
+        content: url(../img/cat-slim-desktop.svg);
+        right: unset;
+        left: 52px;
+        top: 41px;
+      }
+    }
+
+    &--weight-gain{
+      &::before{
+        content: url(../img/cat-pro-desktop.svg);
+        right: unset;
+        left: 33px;
+        top: 47px;
+      }
+    }
+  }
+
+  .programs__title{
+    padding: 36px 0 73px 163px;
+  }
+
+  .programs__description{
+    padding: 0 0 27px;
+    margin: 0;
+    width: auto;
+  }
+}
