--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 
 @import "./blocks/header/main-header.scss";
 @import "./blocks/header/main-nav.scss";
+@import "./blocks/header/main-nav-wrapper.scss";
 @import "./blocks/header/site-list.scss";
 
 @import "./blocks/main/main.scss";
