--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -56,6 +56,16 @@
   display: block;
   font-size: 16px;
   line-height: 16px;
+  position: relative;
+
+
+    &::after{
+      position: absolute;
+      content: url(../img/icon-arrow.svg);
+      left: 100px;
+      top: 19px;
+      display: block;
+    }
 }
 
 @media (min-width: $tablet-width) {
@@ -96,6 +106,13 @@
     padding: 0;
     font-size: 20px;
     line-height: 30px;
+
+    &::after{
+      position: absolute;
+      content: url(../img/icon-arrow.svg);
+      left: 133px;
+      top: -1px;
+    }
   }
 }
 
@@ -139,5 +156,15 @@
     padding: 0 0 27px;
     margin: 0;
     width: auto;
+  }
+
+  .programs__link{
+
+    &::after{
+      position: absolute;
+      content: url(../img/icon-arrow.svg);
+      left: 136px;
+      top: -3px;
+    }
   }
 }
