--- a/source/sass/blocks/main/program-type.scss
+++ b/source/sass/blocks/main/program-type.scss
@@ -14,18 +14,73 @@
 
 }
 
+.program-type__control{
+  position: relative;
+  display: block;
+  padding: 6px 0 6px 45px;
+}
+
+.program-type__control-input:checked + .program-type__control-mark-radio::before{
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: $basic-green;
+  left: calc(50% - 7px);
+  top: calc(50% - 7px);
+}
+
+.program-type__control-mark-radio{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid $special-gray;
+  border-radius: 50%;
+}
+
 .program-type__control-label{
   text-transform: uppercase;
   color: $special-dark-gray-2;
 }
 
 @media (min-width: $tablet-width){
-  .program-type{
-    padding: 22px 0 19px;
-  }
 
   .program-type__list{
     padding: 30px;
     outline: 1px solid $basic-gray-4;
+  }
+
+  .program-type__control{
+    position: relative;
+    display: block;
+    padding: 5px 0 5px 60px;
+  }
+
+  .program-type__control-input:checked + .program-type__control-mark-radio::before{
+    position: absolute;
+    content: "";
+    width: 18px;
+    height: 18px;
+    left: calc(50% - 9px);
+    top: calc(50% - 9px);
+  }
+
+  .program-type__control-mark-radio{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media (min-width: $desktop-width){
+  .program-type{
+    padding: 0;
+  }
+
+  .program-type__list{
+    padding: 25px 30px;
   }
 }
