--- a/source/sass/blocks/main/form-additionally.scss
+++ b/source/sass/blocks/main/form-additionally.scss
@@ -25,6 +25,7 @@
   margin: 0;
   list-style-type: none;
   padding-bottom: 34px;
+  display: grid;
   gap: 12px;
 }
 
@@ -33,8 +34,27 @@
   text-transform: uppercase;
 }
 
-.form-additionally__control-input{
+.form-additionally__control{
+  position: relative;
+  display: block;
+  padding: 5px 0 7px 46px
+}
 
+.form-additionally__control-input:checked + .form-additionally__control-mark-checkbox::before{
+  position: absolute;
+  content: url(../img/checkbox-checked.svg);
+  left: calc(50% - 9px);
+  top: calc(50% - 7px);
+}
+
+.form-additionally__control-mark-checkbox{
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid $special-gray;
 }
 
 .form-additionally__control-label{
@@ -50,9 +70,6 @@
 }
 
 @media (min-width: $tablet-width){
-  .form-additionally{
-
-   }
 
   .form-additionally__title{
 
@@ -84,6 +101,25 @@
     gap: 32px 61px;
   }
 
+  .form-additionally__control{
+    position: relative;
+    padding: 5px 0 5px 59px
+  }
+
+  .form-additionally__control-input:checked + .form-additionally__control-mark-checkbox::before{
+    position: absolute;
+    content: url(../img/checkbox-checked-tablet.svg);
+    left: calc(50% - 12px);
+    top: calc(50% - 13px);
+  }
+
+  .form-additionally__control-mark-checkbox{
+    position: absolute;
+    content: "";
+    width: 40px;
+    height: 40px;
+  }
+
   .form__item-wrapper{
     grid-template-columns: 1fr 1fr;
     gap: 61px;
@@ -99,12 +135,6 @@
     font-size: 16px;
     line-height: 16px;
     text-align: left;
-  }
-}
-
-@media (min-width: $desktop-width){
-  .form-additionally__list{
-    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
@@ -132,4 +162,8 @@
     top: 20px;
   }
 }
+
+  .form-additionally__list{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
