--- a/source/sass/blocks/main/form-contact.scss
+++ b/source/sass/blocks/main/form-contact.scss
@@ -49,13 +49,13 @@
 .form-contact__email-logo{
   position: absolute;
   right: 15px;
-  top: 17px;
+  top: calc(50% - 7px);
 }
 
 .form-contact__phone-logo{
   position: absolute;
   right: 13px;
-  top: 13px;
+  top: calc(50% - 10px);
 }
 
 @media (min-width: $tablet-width){
@@ -79,6 +79,16 @@
         right: -70px;
         top: 20px;
     }
+  }
+
+  .form-contact__email-logo{
+    position: absolute;
+    right: 19px;
+  }
+
+  .form-contact__phone-logo{
+    position: absolute;
+    right: 17px;
   }
 }
 
