--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,5 +18,7 @@ $status-error: #FF8282;
 $basic-green: #68b738;
 $basic-green-2: #5eaa2f;
 
+
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
