--- a/source/sass/blocks/header/main-nav.scss
+++ b/source/sass/blocks/header/main-nav.scss
@@ -1,16 +1,90 @@
 .main-nav {
+  z-index: 1;
+}
+
+.main-nav-wrapper{
 
 }
 
-.main-nav__toggle {
+.main-nav__toggle{
   background-color: transparent;
   border: none;
   cursor: pointer;
+  min-width: 24px;
+  min-height: 24px;
+  display: block;
 }
+
+.main-nav--closed .main-nav__toggle::before {
+  position: absolute;
+  content: "";
+  width: 24px;
+  height: 2px;
+  top: 26px;
+  right: 20px;
+  background-color: $black;
+  box-shadow: 0 8px 0 0 $black, 0 16px 0 0 $black;
+
+  &:hover::before {
+    background-color: fade($black, 30%);
+  }
+
+  &:active::before {
+    background-color: fade($black, 60%);
+  }
+}
+
+@media (max-width: $mobile-width-only){
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+
+.main-nav--opened .main-nav__toggle{
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 35px;
+    right: 20px;
+    width: 24px;
+    height: 2px;
+    background-color: $black;
+  }
+
+  &::after{
+    transform: rotate(45deg);
+  }
+
+  &::before{
+    transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: lighten($black, 30%);
+  }
+
+  &:focus::before,
+  &:focus::after {
+    background-color: lighten($black, 60%);
+  }
+}
+
+// .main-nav--nojs .main-nav__toggle{
+//   display: none;
+// }
+
+// .main-nav--nojs .main-nav__list{
+//   display: block;
+// }
 
 @media (min-width: $tablet-width) {
   .main-nav__toggle{
     display: none;
   }
 
+  .main-nav--closed .main-nav__list {
+    display: flex;
+  }
 }
