--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -4,7 +4,6 @@
   padding: 0;
   list-style-type: none;
   text-transform: uppercase;
-  top: 71px;
   left: 0;
   min-width: 100%;
   background-color: $white;
@@ -12,7 +11,6 @@
 }
 
 .site-list__item{
-    min-height: 66px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,18 +18,19 @@
     font-size: 20px;
     line-height: 20px;
     text-transform: uppercase;
+    padding: 22px 0 24px;
 }
 
     @media (max-width: $mobile-width-only){
       .site-list__item{
         position: relative;
-
         &::before{
         position: absolute;
         content: "";
         border-top: 1px solid $border-gray-2;
         height: 1px;
-        width: 100%;
+        left: -20px;
+        right: -20px;
         top: 0;
       }
 
@@ -40,7 +39,8 @@
         content: "";
         border-top: 1px solid $border-gray-2;
         height: 1px;
-        width: 100%;
+        left: -20px;
+        right: -20px;
         bottom: 0;
       }
     }
@@ -50,10 +50,6 @@
   text-decoration: none;
   color: $black;
 }
-
-// .main-nav--nojs .site-list{
-//   position: static;
-// }
 
 @media (min-width: $tablet-width){
   .site-list{
@@ -76,6 +72,7 @@
     text-transform: uppercase;
     border: none;
     position: relative;
+    padding: 10px 0;
 
     &--current::after{
       content: "";
@@ -111,11 +108,9 @@
   }
 
   .site-list__link {
-
     &--white{
       color: $white;
     }
-
   }
 
   .site-list__item{
