--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -1,8 +1,6 @@
-.programs{
+.programs {}
 
-}
-
-.programs__list{
+.programs__list {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -10,20 +8,20 @@
   gap: 20px;
 }
 
-.programs__item{
+.programs__item {
   background-color: $basic-gray;
   padding: 20px;
   position: relative;
 
-  &--weight-loss{
-    &::before{
+  &--weight-loss {
+    &::before {
       content: url(../img/cat-slim.svg);
       position: absolute;
     }
   }
 
-  &--weight-gain{
-    &::before{
+  &--weight-gain {
+    &::before {
       content: url(../img/cat-pro.svg);
       position: absolute;
       left: 13px;
@@ -31,7 +29,7 @@
   }
 }
 
-.programs__title{
+.programs__title {
   margin: 0;
   padding: 10px 0 0 71px;
   text-transform: uppercase;
@@ -40,7 +38,7 @@
   font-weight: 400;
 }
 
-.programs__description{
+.programs__description {
   margin: 0;
   padding: 22px 0;
   color: $special-dark-gray;
@@ -48,7 +46,7 @@
   border-bottom: 1px solid $border-gray;
 }
 
-.programs__link{
+.programs__link {
   text-transform: uppercase;
   text-decoration: none;
   color: $black;
@@ -59,28 +57,28 @@
   position: relative;
 
 
-    &::after{
-      position: absolute;
-      content: url(../img/icon-arrow.svg);
-      left: 100px;
-      top: 19px;
-      display: block;
-    }
+  &::after {
+    position: absolute;
+    content: url(../img/icon-arrow.svg);
+    left: 100px;
+    top: 19px;
+    display: block;
+  }
 }
 
 @media (min-width: $tablet-width) {
-  .programs__item{
+  .programs__item {
     padding: 77px 62px 57px 52px;
 
-    &--weight-loss{
-      &::before{
+    &--weight-loss {
+      &::before {
         content: url(../img/cat-slim-tablet.svg);
         right: 62px;
       }
     }
 
-    &--weight-gain{
-      &::before{
+    &--weight-gain {
+      &::before {
         content: url(../img/cat-pro-tablet.svg);
         right: 28px;
         left: unset;
@@ -88,13 +86,13 @@
     }
   }
 
-  .programs__title{
+  .programs__title {
     padding: 0;
     font-size: 36px;
     line-height: 36px;
   }
 
-  .programs__description{
+  .programs__description {
     padding: 22px 0 52px;
     font-size: 16px;
     line-height: 24px;
@@ -102,12 +100,12 @@
     width: 340px;
   }
 
-  .programs__link{
+  .programs__link {
     padding: 0;
     font-size: 20px;
     line-height: 30px;
 
-    &::after{
+    &::after {
       position: absolute;
       content: url(../img/icon-arrow.svg);
       left: 133px;
@@ -117,20 +115,20 @@
 }
 
 @media (min-width: $desktop-width) {
-  .programs{
+  .programs {
     padding-top: 82px;
   }
 
-  .programs__list{
+  .programs__list {
     grid-template-columns: 1fr 1fr;
     gap: 80px;
   }
 
-  .programs__item{
+  .programs__item {
     padding: 41px 51px 59px;
 
-    &--weight-loss{
-      &::before{
+    &--weight-loss {
+      &::before {
         content: url(../img/cat-slim-desktop.svg);
         right: unset;
         left: 52px;
@@ -138,8 +136,8 @@
       }
     }
 
-    &--weight-gain{
-      &::before{
+    &--weight-gain {
+      &::before {
         content: url(../img/cat-pro-desktop.svg);
         right: unset;
         left: 33px;
@@ -148,19 +146,19 @@
     }
   }
 
-  .programs__title{
+  .programs__title {
     padding: 36px 0 73px 163px;
   }
 
-  .programs__description{
+  .programs__description {
     padding: 0 0 27px;
     margin: 0;
     width: auto;
   }
 
-  .programs__link{
+  .programs__link {
 
-    &::after{
+    &::after {
       position: absolute;
       content: url(../img/icon-arrow.svg);
       left: 136px;
