добавил адаптивные изображение на странице каталога

--- a/source/sass/blocks/footer/main-footer.scss
+++ b/source/sass/blocks/footer/main-footer.scss
@@ -12,6 +12,14 @@
   text-align: center;
   padding-bottom: 31px;
   border-bottom: 1px solid $border-gray;
+
+    &:hover{
+      opacity: 0.8;
+    }
+
+    &:active{
+      opacity: 0.68;
+    }
 }
 
 .main-footer__copyright {
