--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -12,13 +12,28 @@
   position: absolute;
   top: 10px;
   left: 20px;
+
+    &:hover{
+      opacity: 0.8;
+    }
+
+    &:focus{
+      opacity: 0.6;
+    }
 }
 
 .main-header__logo-secondary{
-  grid-area: img-text;
   display: block;
   padding: 24px 0;
   margin: 0 auto;
+
+    &:hover{
+      opacity: 0.8;
+    }
+
+    &:focus{
+      opacity: 0.6;
+    }
 }
 
 .main-header__logo-image {
