--- a/source/sass/blocks/footer/copyright.scss
+++ b/source/sass/blocks/footer/copyright.scss
@@ -1,6 +1,15 @@
 .copyright {
   display: flex;
   justify-content: space-between;
+
+  &:hover > .copyright__link{
+    color: $basic-green;
+  }
+
+  &:active{
+    opacity: 0.3;
+  }
+
 }
 
 .copyright__text {
@@ -8,9 +17,9 @@
   font-family: "Arial";
   font-size: 16px;
   font-weight: 400;
-  color: $special-dark-gray;
 }
 
 .copyright__link {
   line-height: 0;
+  color: $special-dark-gray;
 }
