--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -90,11 +90,11 @@
   .site-list__link {
 
     &:hover {
-      color: lighten($black, 30%);
+      opacity: 0.6;
     }
 
-    &:focus {
-      color: lighten($black, 60%);
+    &:active {
+      opacity: 0.3;
     }
   }
 }
