--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,8 @@
 @import "./page.scss";
 
 @import "./blocks/button.scss";
+@import "./blocks/error.scss";
+@import "./blocks/disabled.scss";
 @import "./blocks/page-title.scss";
 @import "./blocks/section-title.scss";
 @import "./blocks/global/container-content.scss";
