--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,16 +6,17 @@ $basic-gray-4: #E7E7E7;
 $special-gray: #CDCDCD;
 $special-gray-2: #EBEBEB;
 $special-gray-3: #C4C4C4;
+$special-gray-4: #666666;
 $border-gray: #D9D9D9;
 $border-gray-2: #E6E6E6;
-$special-gray-3: #666666;
+$border-gray-3: #BABABA;
 $special-dark-gray: #444444;
 $special-dark-gray-2: #222222;
 $another-black: #111111;
 $black: #000000;
 $status-error: #FF8282;
 $basic-green: #68b738;
-$basic-green-2: #5eaa2f;
+$basic-green-2: #5EAA2F;
 
 $mobile-width-only: 767px;
 $tablet-width: 768px;
